force-app/main/default/objects/Membership__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <label>API</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>