force-app/main/default/objects/Membership__c/fields/calendar_id_group__c.field-meta.xml
<CustomField>
    <fullName>calendar_id_group__c</fullName>
    <label>calendar_id_group</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>