force-app/main/default/objects/Membership__c/fields/contact_deleted__c.field-meta.xml
<CustomField>
    <fullName>contact_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contact_deleted</label>
    <type>Checkbox</type>
</CustomField>