force-app/main/default/objects/Membership__c/fields/contact_hidden__c.field-meta.xml
<CustomField>
    <fullName>contact_hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contact_hidden</label>
    <type>Checkbox</type>
</CustomField>