force-app/main/default/objects/Membership__c/fields/contact_oldid__c.field-meta.xml
<CustomField>
    <fullName>contact_oldid__c</fullName>
    <label>contact_oldid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>