force-app/main/default/objects/Membership__c/fields/crdate_contact__c.field-meta.xml
<CustomField>
    <fullName>crdate_contact__c</fullName>
    <label>crdate_contact</label>
    <type>DateTime</type>
</CustomField>