force-app/main/default/objects/Membership__c/fields/daymessage_group__c.field-meta.xml
<CustomField>
    <fullName>daymessage_group__c</fullName>
    <label>daymessage_group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>