force-app/main/default/objects/Membership__c/fields/ddprogram_group__c.field-meta.xml
<CustomField>
    <fullName>ddprogram_group__c</fullName>
    <label>ddprogram_group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>