force-app/main/default/objects/Membership__c/fields/External_Id_group__c.field-meta.xml
<CustomField>
    <fullName>External_Id_group__c</fullName>
    <externalId>true</externalId>
    <label>External Id_group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>