force-app/main/default/objects/Membership__c/fields/hidden_group__c.field-meta.xml
<CustomField>
    <fullName>hidden_group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hidden_group</label>
    <type>Checkbox</type>
</CustomField>