force-app/main/default/objects/Membership__c/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <description>The hierarchy of the membership.</description>
    <label>Hierarchy</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>