force-app/main/default/objects/Membership__c/fields/isForUpdateMembershipApplication__c.field-meta.xml
<CustomField>
    <fullName>isForUpdateMembershipApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if current membership is available for &quot;Update Membership Application&quot;.</description>
    <label>For Update Membership Application</label>
    <type>Checkbox</type>
</CustomField>