force-app/main/default/objects/Membership__c/fields/Membership_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Membership_Benefits__c</fullName>
    <label>Membership Benefits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>