force-app/main/default/objects/Membership__c/fields/Required_Documents__c.field-meta.xml
<CustomField>
    <fullName>Required_Documents__c</fullName>
    <inlineHelpText>This field is dislayed in the further information required reminder email.</inlineHelpText>
    <label>Required Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>