force-app/main/default/objects/Membership__c/fields/tx_efnsusr_contact_id_group__c.field-meta.xml
<CustomField>
    <fullName>tx_efnsusr_contact_id_group__c</fullName>
    <label>tx_efnsusr_contact_id_group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>