force-app/main/default/objects/Membership__c/fields/www__c.field-meta.xml
<CustomField>
    <fullName>www__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>