force-app/main/default/objects/Membership__c/fields/zusatz2__c.field-meta.xml
<CustomField>
    <fullName>zusatz2__c</fullName>
    <label>zusatz2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>