force-app/main/default/objects/Membership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reviewer__c</columns>
    <columns>Membership_Benefits__c</columns>
    <columns>www__c</columns>
    <columns>Hierarchy__c</columns>
    <columns>contact_hidden__c</columns>
    <columns>Required_Documents__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>